--- a/App/assets/css/profile.css
+++ b/App/assets/css/profile.css
@@ -664,23 +664,43 @@ body {
 }
 
 @media(max-width:500px){
-    .rankingsContainer{
-        padding: 0.2rem;
+    .main__header{
+        background-image: url("../img/banner2.jpg");
     }
-    .main__friends h2, .main__global h2{
-        font-size: 1.2em;    
+    .main__data{
+        flex-direction: column;
     }
-    .ranking__info p, .ranking__info2 p{
-        font-size: 0.8em;
+
+    .main__data-user{
+        margin: 0 auto;
+    }
+    .main__data-edit{
+        /* border: solid; */
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     
+    .main__data-edit button{
+        width: 80%;
+        background-color: var(--principal);
+        font-size: 1.5em;
+        font-family: var(--bold);
+        border-radius: 8px;
+        padding: 1rem 0;
     }
-    .ranking__points p{
-        font-size: 0.8em;
+    .main__userInfo{
+        flex-direction: column;
     }
-    .main__info p{
-        font-size: 1.2em;
+    .main__history-games{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* border: solid; */
     }
-    .box_titulo{
-        height: 4vh;
+
+    .oculto2{
+        display: none;
     }
 }
