Completado readme y últimos retoques de responsive

--- a/App/assets/css/bets.css
+++ b/App/assets/css/bets.css
@@ -266,6 +266,12 @@ body {
     /* border: solid; */
 }
 
+.slider-container {
+    overflow-x: auto;  /* Permite desplazamiento */
+    scrollbar-width: none; /* Oculta scroll en Firefox */
+    -ms-overflow-style: none; /* Oculta scroll en IE y Edge */
+
+}
 .slider-container::-webkit-scrollbar {
     display: none;
 }
@@ -827,6 +833,13 @@ body {
     }
     
 }
+@media(max-width:651px){
+    .main__games{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 @media(max-width:600px){
     .main__popUp{
         width: 90vw;
@@ -838,11 +851,7 @@ body {
         justify-content: space-between;
         gap: 8px;
     }
-    .main__games{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+    
     .oculto2{
         display: none;
     }
