--- a/App/assets/css/challenges.css
+++ b/App/assets/css/challenges.css
@@ -430,7 +430,7 @@ body {
         display: block;
     }
     .box_titulo{
-        height: 6vh;
+        height: 100%;
     }
 
     .main{
@@ -528,7 +528,7 @@ body {
 
     }
     .box_titulo{
-        height: 4vh;
+        height: 100%;
     }
 }
 
