Agregadas animaciones: transicion de botones, efecto hover en las tarjetas de apuestas, animacion que simulan balones en la pagina de registro y rotación de iconos al pasar sobre ellos.

--- a/App/assets/css/bets.css
+++ b/App/assets/css/bets.css
@@ -130,22 +130,28 @@ body {
     height: 50px;
     width: 50px;
     fill: var(--secundario);
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .header__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transition: background-color 0.3s ease;
+    transform: rotate(15deg);
 }
 .header__svg2{
     height: 24px;
     width: 24px;
     fill: var(--principal);
     cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .header__svg2:hover{
     fill: var(--secundario);
     scale: 1.2;
+    transition: background-color 0.3s ease;
+    transform: rotate(15deg);
 }
 .separador{
     width: 100%;
@@ -236,12 +242,14 @@ body {
     background-color: var(--principal);
     padding: 1vh 2vw;
     border-radius: 12px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 .main__createBet-access a:hover{
     border: 2px solid var(--principal);
     background-color: var(--secundario);
     color: var(--principal);
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 .main__leagues{
     width: 90%;
@@ -336,6 +344,8 @@ body {
 
 .main__game:hover{
     background-color: var(--principal);
+    transform: translateY(-5px);
+    box-shadow: 0 25px 15px rgba(0, 0, 0, 0.2);
 }
 
 /* Cada una de las apuestas*/
@@ -549,6 +559,7 @@ body {
 .popUp__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transform: rotate(15deg);
 }
 
 .form{
@@ -721,6 +732,7 @@ body {
 .follow_icons .footer__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transform: rotate(15deg);
 }
 
 .footer__copy{
@@ -822,6 +834,7 @@ body {
     }
     .menu__movil a:hover{
         background-color: var(--principal);
+        transform: rotate(15deg);
     }
     .menu__movil a > svg{
         width: 5vw;
