--- a/App/assets/css/profile.css
+++ b/App/assets/css/profile.css
@@ -127,21 +127,27 @@ body {
     height: 50px;
     width: 50px;
     fill: var(--secundario);
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 .header__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transition: background-color 0.3s, color 0.3s;
+    transform: rotate(15deg);
 }
 .header__svg2{
     height: 24px;
     width: 24px;
     fill: var(--principal);
     cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .header__svg2:hover{
     fill: var(--secundario);
     scale: 1.2;
+    transition: background-color 0.3s, color 0.3s;
+    transform: rotate(15deg);
 }
 .separador{
     width: 100%;
@@ -221,6 +227,7 @@ body {
     fill: var(--principal);
     scale: 1.2;
     vertical-align: middle;
+    transform: rotate(15deg);
 }
 
 .main__data-money{
@@ -265,6 +272,7 @@ body {
     font-family: var(--bold);
     border-radius: 8px;
     padding: 1rem 0;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .main__data-edit button:hover{
@@ -272,6 +280,7 @@ body {
     color: var(--principal);
     border: 1px solid var(--principal);
     cursor: pointer;
+    transition: background-color 0.3s ease;
 } 
 
 .separador2{
@@ -390,6 +399,8 @@ body {
 
 .main__history-game:hover{
     background-color: var(--principal);
+    transform: translateY(-5px);
+    box-shadow: 0 20px 15px rgba(0, 0, 0, 0.2);
 }
 
 /* Cada una de las apuestas*/
@@ -541,6 +552,7 @@ body {
 .follow_icons .footer__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transform: rotate(15deg);
 }
 
 .footer__copy{
@@ -635,6 +647,7 @@ body {
     }
     .menu__movil a:hover{
         background-color: var(--principal);
+        transform: rotate(15deg);
     }
     .menu__movil a > svg{
         width: 5vw;
