--- a/App/assets/css/ranking.css
+++ b/App/assets/css/ranking.css
@@ -134,20 +134,30 @@ body {
     height: 50px;
     width: 50px;
     fill: var(--secundario);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+
 }
 .header__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transition: background-color 0.3s, color 0.3s;
+    transform: rotate(15deg);
+
 }
 .header__svg2{
     height: 24px;
     width: 24px;
     fill: var(--principal);
     cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+
 }
 .header__svg2:hover{
     fill: var(--secundario);
     scale: 1.2;
+    transition: background-color 0.3s, color 0.3s;
+    transform: rotate(15deg);
+
 }
 /* LINEA DE DEGRADADO ENTRE HEADER Y MAIN */
 .separador{
@@ -423,6 +433,7 @@ body {
 .follow_icons .footer__svg:hover{
     fill: var(--principal);
     scale: 1.2;
+    transform: rotate(15deg);
 }
 
 .footer__copy{
@@ -549,6 +560,7 @@ body {
     }
     .menu__movil a:hover{
         background-color: var(--principal);
+        transform: rotate(15deg);
     }
     .menu__movil a > svg{
         width: 5vw;
