--- a/App/assets/css/challenges.css
+++ b/App/assets/css/challenges.css
@@ -164,6 +164,24 @@ body {
 }
 
 /*MAIN DE LA PAGINA*/
+/*FADE IN*/
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeIn 2s ease-out forwards;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
 
 .main{
     display: flex;
