--- a/App/assets/css/estilo.css
+++ b/App/assets/css/estilo.css
@@ -43,6 +43,23 @@ body {
     margin: 0  auto;
 }
 
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeIn 2s ease-out forwards;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
 /*Header*/
 .header{
     color: var(--secundario);
