--- a/App/assets/css/challenges.css
+++ b/App/assets/css/challenges.css
@@ -391,7 +391,9 @@ body {
     align-items: center;
     /* border: solid white; */
 }
-
+.follow_icons{
+    display: flex;
+}
 .footer__svg{
     height: 24px;
     width: 24px;
