--- a/App/assets/css/estilo.css
+++ b/App/assets/css/estilo.css
@@ -444,7 +444,9 @@ body {
     align-items: center;
     /* border: solid white; */
 }
-
+.follow_icons{
+    display: flex;
+}
 .footer__svg{
     height: 24px;
     width: 24px;
