--- a/App/assets/css/bets.css
+++ b/App/assets/css/bets.css
@@ -30,7 +30,7 @@
     --principal: rgb(167, 244, 7);
     --secundario: #000000;
     --blanco: #FFFFFF;
-    --gris: rgb(144, 142, 142);
+    --gris: #777676;
     --terciario: #7E8B62;
     --rojo: #7E0505;
     --ganador: #147C06;
