--- a/App/assets/css/challenges.css
+++ b/App/assets/css/challenges.css
@@ -31,7 +31,7 @@
     --principal: rgb(167, 244, 7);
     --secundario: #000000;
     --blanco: #FFFFFF;
-    --gris: rgb(144, 142, 142);
+    --gris: #777676;
     --terciario: #7E8B62;
     --rojo: #7E0505;
     --ganador: #147C06;
@@ -295,6 +295,9 @@ body {
 }
 
 .challenge__resultado p{
+    display: flex;
+    gap: 8px;
+    align-items: center;
     font-size: 1.2em;
     font-family: var(--bold);
 }
